@@ -1,3 +1,7 @@
+2008-11-06  Dennis Friis  <peavey@placid.dk>
+
+	* src/game.cpp: Do not activate shortcuts if tradewindow is visible. 
+
 2008-11-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/gui/gui.cpp, data/graphics/gui/sansserif8.png: Applied more
